fix: added "whitespace no wrap " in  cuisines name for sm screen for text getting wrapped up earlier

--- a/restrauntDetail.css
+++ b/restrauntDetail.css
@@ -1434,7 +1434,7 @@ header {
     .order-online-options-smallScreen {
         margin-left: -2rem;
         width: 100%;
-        height: 2.8rem;
+        height: 2.5rem;
         display: flex;
         align-items: center;
         gap: 1rem;
@@ -1448,8 +1448,9 @@ header {
     }
 
     .cuisine-name-small-screen {
-        padding: 6px 10px 5px 10px;
-        height: 90%;
+        padding: 0.5rem 0.5rem 0.8rem 0.5rem;
+        height: 85%;
+        white-space: nowrap;
     }
 
     .items-added-container {
